hphp/test/slow/use_function/realias.php.expectf
string(7) "foo\bar"

Fatal error: Call to undefined function foobar() in %s/use_function/realias.php on line 14
